[package]
name = "abscript-cli"
version = "0.1.0"
authors = ["Justin Schweigert <justin@schweigert.dev>"]
edition = "2018"

[workspace]
members = [
    ".",
    "abscript"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
abscript = { path = "abscript", features = ["debug"] }
termcolor = "1.1"