[package]
name = "bobascript-cli"
version = "0.1.0"
authors = ["Justin Schweigert <justin@schweigert.dev>"]
edition = "2018"

[workspace]
members = [
    ".",
    "bobascript"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bobascript = { path = "bobascript", features = ["super_debug"] }
termcolor = "1.1"
rustyline = "8.2"
rustyline-derive = "0.4"