[package]
name = "bobascript-cli"
version = "0.1.2"
authors = ["Justin Schweigert <justin@schweigert.dev>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sand-head/BobaScript"
# temporarily do not publish the CLI
publish = false

[workspace]
members = [
    ".",
    "crates/bobascript",
    "crates/bobascript-parser"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bobascript = { path = "crates/bobascript", features = ["super_debug"], version = "0.1" }
termcolor = "1.1"
rustyline = "8.2"
rustyline-derive = "0.4"