[package]
name = "bobascript"
version = "0.1.0"
authors = ["Justin Schweigert <justin@schweigert.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []
super_debug = ["debug"]

[dependencies]
bobascript-parser = { path = "../bobascript-parser" }
num_enum = "0.5"
thiserror = "1.0"
