[package]
name = "bobascript"
description = "a nice, cold, refreshing scripting language built in Rust"
version = "0.1.2"
authors = ["Justin Schweigert <justin@schweigert.dev>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sand-head/BobaScript"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []
super_debug = ["debug"]

[dependencies]
bobascript-parser = { path = "../bobascript-parser", version = "0.1.2" }
num_enum = "0.5"
thiserror = "1.0"
